--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My second git repogit init</title>
+    <title>My second git repo</title>
 </head>
 <body>
-    
+    <h1>Mama look i can create git</h1>
+    <h2>Mama i can code now</h2>
+    <h3>tumi aiso amar basay</h3>
 </body>
 </html>
