--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second git repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Mama look i can create git</h1>
     <h2>Mama i can code now</h2>
     <h3>tumi aiso amar basay</h3>
+    <p>ami tomak bhalobashi tumi ki amak bhalobaso na? ami tomak bhalobashi tumi ki amak bhalobaso na? ami tomak bhalobashi tumi ki amak bhalobaso na? ami tomak bhalobashi tumi ki amak bhalobaso na?</p>
+    <p>ami ami tumi tumi s se o amar naam ney nai</p>
 </body>
 </html>
